# FileShare

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: main.rs
templates/: file.html  p2p.html  upload.html
